div overlapping fixed

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html, body {
 .header {
     position: fixed;
     width: 100%;
+    z-index: 2;
 }
 
 .content-container {
@@ -278,7 +279,7 @@ nav li a:hover {
     height:100%;
     top:0;
     left: 0;
-    z-index: 9999;
+    z-index: 1;
 }
 
 .show {
